# BuyPilot-AI

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  260522-handoff.md  260524-handoff.md  CHAT_STREAM_DATAFLOW_STATE_MACHINE.md  CLAUDE.md  DESIGN.md  Makefile  PRODUCT.md  README.md  design-decisions.md
backend/: Dockerfile  README.md  pyproject.toml  pyrightconfig.json
backend/prompts/: clarification.md  criteria_generation.md  decision.md  generate_comparison.md  image_analysis.md  intent_analysis.md  metadata_extraction.md  recommendation.md  recommendation_stream.md  schema_overrides.md  shopping_strategy.md  strategy_narration.md
backend/src/: main.py
backend/src/api/: admin_auth.py  admin_eval.py  app.py  cancel.py  cart.py  chat.py  feedback.py  history.py  observability.py  products.py  upload.py
backend/src/config/: domain_terms.py  llm_profiles.yaml  settings.py  tuning.py  user_messages.py
backend/src/middleware/: request_context.py
backend/src/repos/: README.md  audit.py  cancellations.py  cart_items.py  conversations.py  database.py  documents.py  eval_runs.py  eval_samples.py  feedbacks.py  ingest.py  models.py  observability_llm.py  products.py  traces.py  vector.py
backend/src/runtime/: cancel_registry.py  (+9 more)
backend/static/: eval_dashboard.py  observability_dashboard.html
backend/tests/: conftest.py  test_android_contract_static.py  test_api_contracts.py  test_architecture_layers.py  test_bm25_recall.py  test_build_clarify_text.py  test_cancel.py  test_chat_api.py  test_checkout.py  test_chunking.py  test_context_diagnostics.py  test_contract_remediation.py  test_criteria_history.py  test_criteria_history_expanded.py  test_demo_smoke.py  test_domain_terms_audit.py  test_domain_terms_pure.py  test_embedding.py  test_embedding_normal_paths.py  test_eval_schema.py  test_grounding_guard.py  test_hard_filters_pure.py  test_image_embedding.py  test_image_upload.py  test_issue_acceptance.py  test_judge_acceptance.py  test_judge_queries.py  test_llm_client.py  test_llm_client_pure_functions.py  test_message_rules.py  test_multimodal_pipeline.py  test_multimodal_pipeline_expanded.py  test_observability.py  test_observability_dashboard_static.py  test_observability_llm.py  test_observability_sse.py  test_pgvector.py  test_pipeline.py  test_product_dataset.py  test_product_detail_api.py  (+26 more)
(+409 files in other folders)
