[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "buypilot-api"
version = "0.1.0"
description = "BuyPilot-AI Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "httpx[socks]>=0.27.0",
    "openai>=1.55.0",
    "numpy>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<10",
    "jsonschema>=4.23.0",
    "pytest-asyncio>=0.24.0,<2",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
eval = [
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E9", "F", "B010"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[tool.setuptools.packages.find]
include = ["src*"]
